hw-detect (1.66) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * On frontends other than GTK+, only ask about PCMCIA resource range when
    user decided to start PCMCIA.  (Closes: #479391)

  [ Ian Campbell ]
  * Add Xen virtual Ethernet to list of known Ethernet drivers.

 -- Jérémy Bobbio <lunar@debian.org>  Mon, 28 Jul 2008 19:27:56 +0200

hw-detect (1.65) unstable; urgency=low

  [ Joey Hess ]
  * Look for firmware files in a firmware subdirectory of the media, 
    as well as at the top level, for neat freaks.
  * Call check-missing-firmware at the end of ethdetect and disk-detect,
    as those programs can manually load modules, that could need firmware too.

  [ Frans Pop ]
  * Starting with initramfs-tools 0.92d the module ide-generic will be loaded
    if the all_generic_ide parameter is passed. Advantage is that with that
    option the module is loaded last instead of first.
  * If the megaraid_mbox driver is in use, wait for the RAID hardware
    initialization to finish before proceeding with the installation and add
    the 'rootdelay' boot parameter for the target system. Closes: #486298.

  [ Joey Hess ]
  * ethdetect: Some modules do not request firmware until their interface
    has been brought up. So up and down every interface so missing firmware
    can be detected. Closes: #491712
  * check-missing-firmware: Don't display dups. Closes: #492246
  * check-missing-firmware: Check that debs are the right architecture before
    trying to use them. Closes: #492249
  * post-base-installer: If dpkg fails to install a firmware package, likely
    because it has dependencies outside base, remove it rather than leaving
    the db in an inconsistent state. Note that bugs have been filed to get all
    such firmware packages fixed. Closes: #492248
  * check-missing-firmware: Avoid trailing space in $files that caused it to
    look for firmware packages containing a file named "" (and probably match
    any package). Closes: #492247